# pickinsta

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: scoring-weight-validator.md
.claude/skills/run-pipeline/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
debug/: README.md  debug_yolo_claude.py
docs/: README.md  composition-rules.md  model-quality-speed-comparison.md  ollama-model-speed-benchmark-report-serverone.md  ollama-server-setup.md  troubleshooting.md
scripts/: generate_gallery.py
src/pickinsta/: __init__.py  __main__.py  clip_scorer.py  ig_image_selector.py
tests/: README.md  test_crop.py  test_cropping_regression.py  test_env_and_cache.py  test_full_integration.py  test_main.py  test_scoring_and_reports.py
tests/benchmarks/: benchmark_ollama_models.py  benchmark_ollama_yolo.py
tests/cropping/: README.md
